kubernetes/entity-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: entity
  name: entity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: entity
  strategy: { }
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: entity
    spec:
      containers:
        - image: deryeger/dse-entity-service
          name: dse-entity-service
          resources: { }
status: { }
