kubernetes/flowcontrol-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: flowcontrol
  name: flowcontrol
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flowcontrol
  strategy: { }
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: flowcontrol
    spec:
      containers:
        - image: deryeger/dse-flowcontrol-service
          name: dse-flowcontrol-service
          resources: { }
status: { }
