kubernetes/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.production.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.production.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/eureka-network: "true"
        io.kompose.service: gateway
    spec:
      containers:
        - env:
            - name: EUREKA_SERVER_ADDRESS
              value: eureka-server
          image: deryeger/dse-gateway:latest
          name: gateway
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
