kubernetes/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.production.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.production.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/mongo-network: "true"
        io.kompose.service: mongo
    spec:
      containers:
        - env:
            - name: MONGO_INITDB_DATABASE
              value: root-db
            - name: MONGO_INITDB_ROOT_PASSWORD
              value: admin
            - name: MONGO_INITDB_ROOT_USERNAME
              value: admin
          image: mongo:latest
          name: mongo
          ports:
            - containerPort: 27017
          resources: {}
      restartPolicy: Always
status: {}
