kubernetes/tracking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: tracking
  name: tracking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracking
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tracking
    spec:
      containers:
      - image: deryeger/dse-tracking-service
        name: dse-tracking-service
        resources: {}
status: {}
