kubernetes/entity-kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: entity
  name: entity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: entity
  strategy: { }
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: entity
    spec:
      containers:
        - image: test/dse-entity-service
          name: dse-entity-service
          imagePullPolicy: Never
          resources: { }
status: { }
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: entity-service
  name: entity-service
spec:
  ports:
    - name: 8889-8889
      port: 8889
      protocol: TCP
      targetPort: 8889
  selector:
    app: entity
  type: ClusterIP
status:
  loadBalancer: { }
