kubernetes/entity-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: entity-service
  name: entity-service
spec:
  ports:
  - name: 8889-8889
    port: 8889
    protocol: TCP
    targetPort: 8889
  selector:
    app: entity-service
  type: ClusterIP
status:
  loadBalancer: {}
