kubernetes/flowcontrol-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: flowcontrol-service
  name: flowcontrol-service
spec:
  ports:
  - name: 8087-8087
    port: 8087
    protocol: TCP
    targetPort: 8087
  selector:
    app: flowcontrol-service
  type: ClusterIP
status:
  loadBalancer: {}
