kubernetes/gateway-kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  strategy: { }
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gateway
    spec:
      containers:
        - image: deryeger/dse-gateway
          name: dse-gateway
          ports:
            - containerPort: 8080
          resources: { }
          readinessProbe:
            httpGet:
              path: /api/actuator/health
              port: 8080
          livenessProbe:
            httpGet:
              path: /api/actuator/health
              port: 8080

status: { }
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: gateway-service
  name: gateway-service
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: gateway
  type: ClusterIP
status:
  loadBalancer: { }
