kubernetes/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rabbitmq-service
  name: rabbitmq-service
spec:
  ports:
  - name: 5672-5672
    port: 5672
    protocol: TCP
    targetPort: 5672
  - name: 15672-15672
    port: 15672
    protocol: TCP
    targetPort: 15672
  selector:
    app: rabbitmq-service
  type: ClusterIP
status:
  loadBalancer: {}
