kubernetes/simulator-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: simulator-service
  name: simulator-service
spec:
  ports:
  - name: 8081-8081
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: simulator-service
  type: ClusterIP
status:
  loadBalancer: {}
