kubernetes/tracking-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: tracking-service
  name: tracking-service
spec:
  ports:
    - name: 8888-8888
      port: 8888
      protocol: TCP
      targetPort: 8888
  selector:
    app: tracking-service
  type: ClusterIP
status:
  loadBalancer: { }
