kubernetes/ingress-kubernetes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dse-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: cockpit-service
                port:
                  number: 80
          - path: /api/*
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
