kubernetes/mongo-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: mongo-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/mongo-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/mongo-network: "true"
